# nuphyctl

./: .gitignore  Cargo.toml  Cross.toml  README.md  skills-lock.json
.github/actions/setup-rust/: action.yml
.github/workflows/: ci.yml  release.yml
docs/: reverse-engineering.md
src/: app.rs  cli.rs  color.rs  hid_io.rs  hid_transport.rs  main.rs  nuphy_protocol.rs  protocol.rs
