[package]
name = "nuphyctl"
version = "0.5.0"
edition = "2024"
description = "CLI for sending NuPhy keyboard HID commands"
license = "MIT"
repository = "https://github.com/fldc/nuphyctl"
readme = "README.md"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
hidapi = { version = "2.6.5", default-features = false, features = [
  "linux-static-hidraw",
] }
